# brokenCBF

broken1/: index.py  note.txt
broken1/isaaclab_cbf/: README.md  eval.py  play_video.py  test_fixed_params.py  test_loco_alone.py  train.py
broken1/isaaclab_cbf/core/: perception.py  safety_filter.py  scenes.py
broken1/isaaclab_cbf/env/: go2_cbf_env.py  locomotion.py  (+1 more)
broken2/: CLAUDE.md  LOG.md  PROGRESS.md  TODO_training.md  baseline_v16_HeavyCOM.csv  baseline_v16_HighActuationNoise.csv  baseline_v17_indist.csv  baseline_v18_indist.csv  baseline_v19_HeavyCOM.csv  baseline_v19_HighActuationNoise.csv  baseline_v19_indist.csv  baseline_v20_indist.csv  baseline_v21_indist.csv  diagnose_alpha_corr_v17.json  diagnose_alpha_corr_v18.json  diagnose_alpha_corr_v19.json  diagnose_alpha_corr_v20.json  diagnose_alpha_corr_v21.json  diagnose_alpha_corr_wk3v11.json  diagnose_alpha_corr_wk3v13.json  diagnose_alpha_corr_wk3v13_1.json  diagnose_grad_sensitivity_wk3rma9.json  diagnose_grad_sensitivity_wk3tight8.json  diagnose_grad_sensitivity_wk3v11.json  diagnose_grad_sensitivity_wk3v13.json  diagnose_grad_sensitivity_wk3v13_1.json  diagnose_phi_corr_v16.json  diagnose_phi_corr_v17.json  diagnose_phi_corr_v18.json  diagnose_phi_corr_v19.json  diagnose_phi_corr_v20.json  diagnose_phi_corr_v21.json  diagnose_phi_corr_wk3rma9.json  diagnose_phi_corr_wk3v11.json  diagnose_phi_corr_wk3v13.json  diagnose_phi_corr_wk3v13_1.json  diagnose_temporal_grid_v16.json  diagnose_temporal_grid_v19.json  diagnose_temporal_grid_v20.json  diagnose_temporal_grid_v21.json  (+12 more)
broken2/data_from_lab/: dump_twostream_base_strict.npz  dump_v13_1_corridor.npz  dump_v13_1_static_corridor.npz  dump_v13_1_stressor.npz  dump_v13_1_stressor_obs.npz  dump_v13_1_stressor_v2.npz  dump_v14_5_corridor.npz  dump_v14_5_navigation.npz  dump_v14_5_stressor_obs.npz  dump_v8_trainmatch.npz  dump_wider_dr_strict.npz  train_and_eval_wk3v13_1.training_summary.csv  train_and_eval_wk3v14_5.training_summary.csv
broken2/docs/: RL_CBF_presentation.pptx  cbf_math_refresher.html  env_runtime.html  hardware_trial_protocol.md  lidar_calibration_protocol.md  paper_outline.md  per_axis_stress_eval_protocol.md  professor_update_2026-05-08.docx  professor_update_2026-05-08.tex  professor_update_2026-05-11.md  professor_update_2026-05-11.tex  professor_update_2026-05-13.tex  professor_update_2026-05-18.tex  professor_update_2026-05-19.tex  project_setup.md  reward_structure.md  student_distillation_spec.md  teacher_architecture.html  v3_2_architecture.html  v8_results.html  wk3_scenario_design.md
broken2/outt/: README.md
broken2/outt/ros_package/: CMakeLists.txt
broken2/outt/ros_package/include/poisson/: cloud_merger.h
broken2/outt/ros_package/src/: odom_publisher.cpp
broken2/safety_cbf_sandbox/: demo_a_sweep.py  demo_alpha_sweep.py  demo_c_sweep.py  demo_phi_collision_cost.py  demo_phi_sweep.py  demo_phi_sweep_adversarial.py  sandbox.py
broken2/scripts/: ablate_all_v13_1.sh  ablate_proprio_grid_v13_1.sh  ablate_z_env_v13_1.sh  aggregate_layer2_results.py  aggregate_multiseed.py  aggregate_v3_results.py  analyze_shared_signal.py  animate_rollout.py  build_professor_update.py  build_slides.py  collect_distill_dataset.py  compare_deploy_vs_teacher.py  diag_alpha_basin.sh  diag_jerk_source.py  diag_lipschitz.py  diagnose_a_corr.py  diagnose_alpha_corr.py  diagnose_alpha_corr_fov_split.py  diagnose_c_corr.py  diagnose_grad_sensitivity.py  diagnose_phi_corr.py  diagnose_shared_signal.py  diagnose_shield_perception.py  diagnose_temporal_grid.py  diagnose_z.py  dump_rollout.py  dump_teacher_rollout_for_student.py  eval_baseline.py  eval_lockedbest_deploy.sh  eval_only_layer3_push.sh  eval_pareto.py  eval_stressor_v8_v9.sh  eval_tight_gap.py  eval_tightcor_frozen_ac.sh  extract_training_summary.py  multi_seed_sweep.sh  multiseed_eval_corridor_strict.sh  parse_archive_collsplit.py  parse_stress_eval.py  play_cbf_smoke.py  (+88 more)
broken3/: .gitignore  README.md  cbf_qp.py  config.py  env.py  phase0_fixed_cbf.py  phase1_train_constant.py  phase2_train_adaptive.py  phase3_ood.py  requirements.txt  utils.py
broken3/go2/: .gitignore  IMPLEMENTATION.md  PHASE10_README.md  README.md  _mdp_inspect.py  _smoke_ablation_masks.py  _smoke_eval_scenes.py  _smoke_rma_history.py  _smoke_rma_static.py  analyze_fingerprint.py  analyze_phi_sweep.py  phase0_5_fixed_cbf.py  phase0_6_phi_sweep.py  phase0_plumbing.py  phase10_adaptivity.py  phase10_aggregate.py  phase10_baseline_grid.sh  phase10_eval_unified.py  phase10_full_breakdown.py  phase10_overnight.sh  phase10_pick_best.py  phase10_smoke.py  phase10_train_unified.py  phase10_viz.html  phase1_5_fingerprint_sweep.py  phase1_train.py  phase2_play.py  phase2_train.py  phase4_lidar_spike.py  phase5_action_jitter_diag.py  phase5_actor_critic_spike.py  phase5_baselines.py  phase5_deploy_eval.py  phase5_final_summary.py  phase5_fingerprint_gate.py  phase5_full_pipeline.sh  phase5_lidar_obstacle_spike.py  phase5_per_channel_sweep.py  phase5_priv_spike.py  phase5_train_student.py  (+25 more)
broken3/hardwares/cbf_go2/src/cbf_go2/: CMakeLists.txt  package.xml
broken3/hardwares/cbf_go2/src/cbf_go2/deploy/: cbf_deploy_model.py  cbf_inference_node.py
broken3/hardwares/cbf_go2/src/cbf_go2/include/common/: patch.hpp  ros2_sport_client.h
broken3/hardwares/cbf_go2/src/cbf_go2/include/poisson/: grid_params.h
broken3/hardwares/cbf_go2/src/cbf_go2/launch/: cbf_go2.launch.py
broken3/hardwares/cbf_go2/src/cbf_go2/src/: cbf_filter_node.cpp  cloud_merger_main.cpp  ros2_sport_client.cpp
broken3/hardwares/prototype/ros_package/: README.md  package.xml
broken3/hardwares/prototype/ros_package/include/common/: time_tools.hpp
broken3/hardwares/prototype/ros_package/launch/: walking_lidar.launch.py
broken3/hardwares/prototype/ros_package/src/: teleop.cpp  walking_bridge.cpp
broken4/: README.md  cbf_qp.py  config.py  env.py  phase1_train_constant.py  phase2_train_adaptive.py  utils.py
broken5/: env.py  eval.py  eval_phi.py  mvp.py  phi_env.py  planner.py  readme.md  safety_filter.py  scene_mvp.xml  sync.sh  train.py  train_phi.py
(+213 files in other folders)
