<?xml version="1.0"?>
<!--
  package.xml — Minimal Go2 Walking + LiDAR

  Extracted from: robot_ws/src/package.xml
  Removed: unitree_hg, rosbag2_cpp (not needed for walking + LiDAR)
-->
<package format="3">
  <name>go2_walking_lidar</name>
  <version>0.1.0</version>
  <description>Minimal Unitree Go2 walking + LiDAR occupancy grid</description>
  <maintainer email="unitree@unitree.com">Unitree</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <!-- V14 (2026-05-21): Python ROS 2 runtime deps for cbf_inference /
       cbf_grid / cbf_filter nodes. -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
